# Lifers

./: .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
lifers/: country_codes.csv  data.py  ebird_api.py  lifers.py  visualise.py
tests/: test_data.py  test_ebird_api.py
