[tool.poetry]
name = "lifers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "^2.0.2"
streamlit = "^1.23.1"
jupyter = "^1.0.0"
requests = "^2.31.0"
pytest = "^7.4.0"
requests-mock = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
